# chainring-U

./: .gitignore  README.md  chainring  chainring.pyw  chainring.sh  config.ini  doxygen.cfg  generate_doc.sh  pyproject.toml  requirements.txt  tests.sh
doc/: README.md
scripts/: check-docstyle.sh  detect-common-errors.sh  detect-dead-code.sh  run-linter.sh
src/: __init__.py  canvas.py  chainring.py  configuration.py  draw_service.py  drawing.py  main_window.py  menubar.py  toolbar.py
src/entities/: __init__.py  arc.py  bounds.py  circle.py  drawing_entity_type.py  entity.py  layer.py  line.py  polyline.py  text.py
src/exporters/: __init__.py  binary_exporter.py  drawing_csv_exporter.py  drawing_exporter.py  dxf_exporter.py  json_exporter.py  room_csv_exporter.py  room_exporter.py  room_txt_exporter.py  svg_exporter.py
src/geometry/: __init__.py  bounds.py  rescaler.py  utils.py
src/gui/: __init__.py  about_dialog.py  canvas.py  canvas_mode.py  drawing_info_dialog.py  drawing_select_dialog.py  floor_select_dialog.py  help_dialog.py  icons.py  load_dialogs.py  main_window.py  menubar.py  palette.py  room.py  room_error_dialog.py  save_dialogs.py  settings_dialog.py  status_bar.py  toolbar.py  tooltip.py
test-data/: Building_1np.dxf  Building_1pp.dxf  Building_2np.dxf  Building_3np.dxf  README
test-drawings/: 15_sap_rooms.sap  15rooms.rooms  15rooms_wo_polygons.rooms  6rooms.rooms  README  dve_velke_mistnosti.rooms  input.drw  input_with_15_rooms.drw  input_with_5_rooms.drw  input_with_rooms.drw  input_without_rooms.drw  nove_mistnosti.rooms
(+59 files in other folders)
