[tool.ruff]

# description of all rules are available on https://docs.astral.sh/ruff/rules/
#select = ["E", "F", "W", "C", "S", "I", "TCH", "SLOT", "RUF", "C90", "N", "SIM"]
#select = ["I", "E", "F", "W", "C", "S", "I", "TCH", "SLOT", "RUF"]
lint.select = ["ALL"]
# we need to check 'mood' of all docstrings, this needs to be enabled explicitly
extend-select = ["D401", "N802"]

ignore = ["F841", "F405", "F403", "RET505"]

target-version = "py311"
pydocstyle.convention = "google"
line-length = 100
flake8-pytest-style.fixture-parentheses = false

[tool.coverage.report]
# unit tests fails if the total coverage measurement is under this threshold value
fail_under = 90

[tool.mypy]
disable_error_code = []
ignore_missing_imports = true

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.1.1",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.14",
]

[project]
name = "Chainring"
version = "1.0.0"
description = "Simple CAD written in Python+Tkinter combination with remote storage support"
authors = []
dependencies = [
    "requests"
]
requires-python = "==3.11.*"
readme = "README.md"
license = "LICENSE"

[tool.pdm.scripts]
start = "pdm run make run"
test = "pdm run make test"
test-unit = "pdm run make test-unit"
test-integration = "pdm run make test-integration"
test-e2e = "pdm run make test-e2e"
